--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
@@ -12,47 +12,57 @@
     "expo:android": "expo start --android",
     "expo:ios": "expo start --ios",
     "expo:web": "expo start --web",
+    "expo:start:clear": "expo start --clear",
+    "expo:start:tunnel": "expo start --tunnel",
     "prebuild": "expo prebuild",
-    "prebuild:clean": "expo prebuild --clean"
+    "prebuild:clean": "expo prebuild --clean",
+    "android:clean": "cd android && ./gradlew clean && cd ..",
+    "android:build": "cd android && ./gradlew assembleRelease && cd ..",
+    "reset:cache": "npm start -- --reset-cache"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "expo": "~49.0.15",
-    "expo-constants": "~14.4.2",
-    "expo-status-bar": "~1.6.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "react-native-screens": "^3.27.0",
-    "react-native-safe-area-context": "^4.7.4",
     "axios": "^1.6.2",
-    "@react-native-async-storage/async-storage": "^1.19.5",
-    "react-native-image-picker": "^7.0.3",
-    "react-native-permissions": "^3.10.1",
+    "expo": "~52.0.0",
+    "expo-constants": "~17.0.8",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-location": "~18.0.10",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-geolocation-service": "^5.3.1",
-    "@react-native-picker/picker": "^2.4.10"
+    "react-native-image-picker": "^7.0.3",
+    "react-native-maps": "1.18.0",
+    "react-native-permissions": "^3.10.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
+    "@react-native-community/cli": "^15.0.0",
+    "@react-native/eslint-config": "^0.76.0",
+    "@react-native/metro-config": "^0.76.0",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
-    "babel-preset-expo": "~9.5.0",
+    "babel-preset-expo": "~54.0.0",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "~29.7.0",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "~5.9.2"
   },
   "engines": {
     "node": ">=18"
   }
 }
-
